deploy/company-k8s/k8s/02-seatunnel-web-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seatunnel-web-api
  namespace: seatunnel-web
  labels:
    app: seatunnel-web-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seatunnel-web-api
  template:
    metadata:
      labels:
        app: seatunnel-web-api
    spec:
      containers:
        - name: seatunnel-web-api
          image: harbor.example.com/data/seatunnel-web-api:starrocks-test
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9527
