deploy/company-k8s/k8s/04-seatunnel-web-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seatunnel-web-ui
  namespace: seatunnel-web
  labels:
    app: seatunnel-web-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seatunnel-web-ui
  template:
    metadata:
      labels:
        app: seatunnel-web-ui
    spec:
      containers:
        - name: seatunnel-web-ui
          image: harbor.example.com/data/seatunnel-web-ui:starrocks-test
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
