deploy/company-k8s/k8s/03-seatunnel-web-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seatunnel-web-api
  namespace: seatunnel-web
  labels:
    app: seatunnel-web-api
spec:
  type: ClusterIP
  selector:
    app: seatunnel-web-api
  ports:
    - name: http
      port: 80
      targetPort: 9527
