deploy/company-k8s/k8s/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seatunnel-web
  namespace: seatunnel-web
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "200m"
spec:
  ingressClassName: nginx
  rules:
    - host: seatunnel-web.example.local
      http:
        paths:
          - path: /seatunnel-web-ui
            pathType: Prefix
            backend:
              service:
                name: seatunnel-web-ui
                port:
                  number: 80
          - path: /seatunnel-web-api
            pathType: Prefix
            backend:
              service:
                name: seatunnel-web-api
                port:
                  number: 80
